Added the functionality: Add book

--- a/LibrarySystem/style/Styling.css
+++ b/LibrarySystem/style/Styling.css
@@ -102,8 +102,7 @@ table {
     text-align:left;
 }
 .thpos{
-    position:absolute;
-    max-width:80%;
+    width:100%;
     background-color:#c2bdbd;
 }
 
